Fix spacing in offer detail

--- a/src/components/OfferDetail/styles.module.scss
+++ b/src/components/OfferDetail/styles.module.scss
@@ -26,10 +26,6 @@
 
 .rightBodyContainer {
   width: 30%;
-
-  .offerInfo {
-    margin-bottom: $biggerSpacing;
-  }
 }
 
 .rightHeader {
